登陆关联用户菜单信息

--- a/login.html
+++ b/login.html
@@ -191,10 +191,10 @@
                     if (res.code != 200) {
                         btn.text("登 陆").attr("disabled", false).removeClass("layui-disabled");
                     } else {
-                        // 把token 写到cookie   expire有效期
-                        $.cookie("TOKEN", res.token, {expires: 7});
-
-                        window.location.href = "/ERP_WEB/index.html";
+                        //把token写到cookie
+                        $.cookie('TOKEN', res.token.token, { expires: 7 });  //登陆成功这后把token放到cookie里面
+                        localStorage.setItem("permissions",res.token.permissions);
+                        window.location.href = "./index.html";
                     }
                 },
                 error: function () {
