--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
         $('.login-out').on("click", function () {
             layer.msg('退出登录成功', function () {
-                window.location = "login.html";
+                window.location = "./login.html";
             });
         });
     });
