--- a/index.html
+++ b/index.html
@@ -53,13 +53,15 @@
                 <a href="javascript:;" data-check-screen="full"><i class="fa fa-arrows-alt"></i></a>
             </li>
             <li class="layui-nav-item layuimini-setting">
-                <a href="javascript:;">admin</a>
+                <a href="javascript:;" class="login_name"></a>
                 <dl class="layui-nav-child">
                     <dd>
-                        <a href="javascript:;" data-iframe-tab="resources/page/user-setting.html" data-title="基本资料" data-icon="fa fa-gears">基本资料</a>
+                        <a href="javascript:;" data-iframe-tab="resources/page/user-setting.html" data-title="基本资料"
+                           data-icon="fa fa-gears">基本资料</a>
                     </dd>
                     <dd>
-                        <a href="javascript:;" data-iframe-tab="resources/page/user-password.html" data-title="修改密码" data-icon="fa fa-gears">修改密码</a>
+                        <a href="javascript:;" data-iframe-tab="resources/page/user-password.html" data-title="修改密码"
+                           data-icon="fa fa-gears">修改密码</a>
                     </dd>
                     <dd>
                         <a href="javascript:;" class="login-out">退出登录</a>
@@ -86,8 +88,10 @@
                 <li class="layui-nav-item">
                     <a href="javascript:;"> <i class="fa fa-dot-circle-o"></i> 页面操作</a>
                     <dl class="layui-nav-child">
-                        <dd><a href="javascript:;" data-page-close="other"><i class="fa fa-window-close"></i> 关闭其他</a></dd>
-                        <dd><a href="javascript:;" data-page-close="all"><i class="fa fa-window-close-o"></i> 关闭全部</a></dd>
+                        <dd><a href="javascript:;" data-page-close="other"><i class="fa fa-window-close"></i> 关闭其他</a>
+                        </dd>
+                        <dd><a href="javascript:;" data-page-close="all"><i class="fa fa-window-close-o"></i> 关闭全部</a>
+                        </dd>
                     </dl>
                 </li>
             </ul>
@@ -111,7 +115,7 @@
             element = layui.element,
             layer = layui.layer;
 
-        layuimini.init(api+'login/loadIndexMenu');
+        layuimini.init(api + 'login/loadIndexMenu');
 
         $('.login-out').on("click", function () {
             layer.msg('退出登录成功', function () {
