去掉登录验证码默认值

--- a/login.html
+++ b/login.html
@@ -137,7 +137,7 @@
                 <div class="layui-form-item">
                     <label class="layui-icon layui-icon-vercode" for="captcha"></label>
                     <input type="text" name="captcha" lay-verify="required" placeholder="图形验证码" autocomplete="off"
-                           class="layui-input verification captcha" value="xszg">
+                           class="layui-input verification captcha" value="">
                     <div class="captcha-img">
                         <img id="captchaPic" onclick="genCode()">
                     </div>
