--- a/login.html
+++ b/login.html
@@ -2,13 +2,14 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>系统登录</title>
+    <title>进销存系统</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta http-equiv="Access-Control-Allow-Origin" content="*">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="format-detection" content="telephone=no">
+    <link rel="icon" href="resources/images/favicon.ico">
     <link rel="stylesheet" href="resources/lib/layui-v2.5.5/css/layui.css" media="all">
     <!--[if lt IE 9]>
     <script src="https://cdn.staticfile.org/html5shiv/r29/html5.min.js"></script>
@@ -21,7 +22,10 @@
             overflow: hidden
         }
         body {
-            background: #009688;
+            height: 100%;
+            background: #f0f2f5 url(resources/images/background.svg) no-repeat center 110px;
+            padding-top: 1px;
+            margin-top: -1px;
         }
 
         body:after {
@@ -64,9 +68,8 @@
         }
 
         .logo-title h1 {
-            color: #009688;
-            font-size: 25px;
-            font-weight: bold;
+            font-weight: 600;
+            color: rgba(0,0,0,.85);
         }
 
         .login-form {
@@ -112,6 +115,12 @@
             height: 36px;
             width: 100%;
         }
+        #login{
+            background-color: #1890ff;
+            -webkit-border-radius: 3px;
+            -moz-border-radius: 3px;
+            border-radius: 3px;
+        }
     </style>
 </head>
 <body onload="getCookie();">
@@ -121,7 +130,7 @@
         <div class="layui-form login-form">
             <form class="layui-form" action="">
                 <div class="layui-form-item logo-title">
-                    <h1>后台登录</h1>
+                    <h1>进销存系统</h1>
                 </div>
                 <div class="layui-form-item">
                     <label class="layui-icon layui-icon-username" for="username"></label>
@@ -148,7 +157,7 @@
                            title="记住密码">
                 </div>
                 <div class="layui-form-item">
-                    <button class="layui-btn layui-btn-fluid" lay-submit="" lay-filter="login">登 入</button>
+                    <button class="layui-btn layui-btn-fluid" lay-submit="" lay-filter="login" id="login">立即登录</button>
                 </div>
             </form>
         </div>
@@ -189,12 +198,12 @@
         if (top.location != self.location) top.location = self.location;
 
         // 粒子线条背景
-        $(document).ready(function () {
+        /*$(document).ready(function () {
             $('.layui-container').particleground({
                 dotColor: '#5cbdaa',
                 lineColor: '#5cbdaa'
             });
-        });
+        });*/
 
         // 进行登录操作
         form.on('submit(login)', function (data) {
