模板优化完毕

--- a/login.html
+++ b/login.html
@@ -121,6 +121,9 @@
             -moz-border-radius: 3px;
             border-radius: 3px;
         }
+        #captchaPic{
+            cursor: pointer;
+        }
     </style>
 </head>
 <body onload="getCookie();">
