--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <a href="javascript:;" data-check-screen="full"><i class="fa fa-arrows-alt"></i></a>
                 </li>
                 <li class="layui-nav-item layuimini-setting">
-                    <a href="javascript:;">
+                    <a href="javascript:;" id="userInfoABtn">
                         <img style="width: 1.9rem;margin-right:.5rem;border-radius: 50%" id="userImages" title="头像">
                     </a>
                     <dl class="layui-nav-child">
@@ -95,14 +95,12 @@
                 <ul class="layui-tab-title" id="top_tabs">
                     <li class="layui-this" id="layuiminiHomeTabId" lay-id=""></li>
                 </ul>
-                <ul class="layui-nav closeBox">
+                <ul class="layui-nav closeBox navBtn">
                     <li class="layui-nav-item">
-                        <a href="javascript:;"> <i class="fa fa-dot-circle-o"></i> 页面操作</a>
+                        <a href="javascript:;"></a>
                         <dl class="layui-nav-child">
-                            <dd><a href="javascript:;" data-page-close="other"><i class="fa fa-window-close"></i> 关闭其他</a>
-                            </dd>
-                            <dd><a href="javascript:;" data-page-close="all"><i class="fa fa-window-close-o"></i> 关闭全部</a>
-                            </dd>
+                            <dd><a href="javascript:;" data-page-close="other"><i class="fa fa-window-close"></i> 关闭其他</a></dd>
+                            <dd><a href="javascript:;" data-page-close="all"><i class="fa fa-window-close-o"></i> 关闭全部</a></dd>
                         </dl>
                     </li>
                 </ul>
