--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@
                     <dl class="layui-nav-child">
                         <dd>
                             <a href="javascript:;" data-iframe-tab="resources/page/system/user/userInfo.html" data-title="基本资料"
-                               data-icon="fa fa-gears">基本资料</a>
+                               data-icon="fa fa-gears"> <i class="layui-icon layui-icon-edit"></i> &nbsp;&nbsp; 基 本 资 料 </a>
                         </dd>
                         <dd>
                             <a href="javascript:;" data-iframe-tab="resources/page/system/user/user-password.html" data-title="修改密码"
-                               data-icon="fa fa-gears">修改密码</a>
+                               data-icon="fa fa-gears"> <i class="layui-icon layui-icon-auz"></i> &nbsp;&nbsp; 修 改 密 码 </a>
                         </dd>
                         <dd>
-                            <a href="javascript:;" class="login-out">退出登录</a>
+                            <a href="javascript:;" class="login-out"> <i class="layui-icon layui-icon-release"></i> &nbsp;&nbsp; 退 出 登 录 </a>
                         </dd>
                     </dl>
                 </li>
