--- a/login.html
+++ b/login.html
@@ -75,7 +75,7 @@
             </div>
         </div>
         <div class="layui-form-item">
-            <input type="checkbox" name="" title="记住密码" lay-skin="primary" checked>
+            <input type="checkbox" name="" title="记住密码" id="rememberMe" name="rememberMe" value="true" lay-skin="primary" checked>
         </div>
         <div class="layui-form-item">
             <button class="pear-btn pear-btn-primary login" lay-submit="" lay-filter="login" id="login">
