🌈style(sidebar): icon gap & width & toggle btn

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
     <link rel="stylesheet" href="resources/js/lay-module/PearAdmin/css/pearAdmin.css"/>
     <link rel="stylesheet" href="resources/js/lay-module/PearAdmin/css/pearNotice.css"/>
     <link rel="stylesheet" href="resources/js/lay-module/PearAdmin/css/pearSocial.css"/>
-
+    <link rel="stylesheet" href="resources/css/custom.css">
+    
     <style id="layuimini-bg-color"></style>
     <style id="pearone-bg-color"></style>
 </head>
