--- a/index.html
+++ b/index.html
@@ -104,10 +104,8 @@
                     <li class="layui-nav-item">
                         <a href="javascript:;"></a>
                         <dl class="layui-nav-child">
-                            <dd><a href="javascript:;" data-page-close="other"><i class="fa fa-window-close"></i>
-                                关闭其他</a></dd>
-                            <dd><a href="javascript:;" data-page-close="all"><i class="fa fa-window-close-o"></i>
-                                关闭全部</a></dd>
+                            <dd><a href="javascript:;" data-page-close="other"><i class="fa fa-window-close"></i> 关 闭 其 他 </a></dd>
+                            <dd><a href="javascript:;" data-page-close="all"><i class="fa fa-window-close-o"></i> 关 闭 全 部 </a></dd>
                         </dl>
                     </li>
                 </ul>
