控制台修改完善

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
     <link rel="stylesheet" href="resources/js/lay-module/PearAdmin/css/pearAdmin.css"/>
     <link rel="stylesheet" href="resources/js/lay-module/PearAdmin/css/pearNotice.css"/>
     <link rel="stylesheet" href="resources/js/lay-module/PearAdmin/css/pearSocial.css"/>
+    <link rel="stylesheet" href="resources/js/lay-module/PearAdmin/css/pearButton.css"/>
+    <link rel="stylesheet" href="resources/js/lay-module/PearAdmin/css/pearOper.css"/>
     <link rel="stylesheet" href="resources/css/custom.css">
-    
     <style id="layuimini-bg-color"></style>
-    <style id="pearone-bg-color"></style>
 </head>
 <body class="layui-layout-body layuimini-all">
 
@@ -111,8 +111,7 @@
                     </li>
                 </ul>
                 <div class="layui-tab-content clildFrame">
-                    <div id="layuiminiHomeTabIframe" class="layui-tab-item layui-show">
-                    </div>
+                    <div id="layuiminiHomeTabIframe" class="layui-tab-item layui-show"></div>
                 </div>
             </div>
         </div>
