--- a/login.html
+++ b/login.html
@@ -19,6 +19,10 @@
             width: 50% !important;
             margin-left: 20px !important;
         }
+
+        #app {
+            background: none;
+        }
     </style>
 </head>
 <body background="resources/js/lay-module/PearAdmin/images/background.svg" onload="getCookie();">
@@ -88,12 +92,12 @@
                             <div class="normal-login-form">
                                 <div class="layui-form-item">
                                     <label class="layui-icon label-icon layui-icon-username"></label>
-                                    <input type="text" name="username" minlength="2" maxlength="10" lay-verify="range"
+                                    <input type="text" name="name" minlength="2" maxlength="10" lay-verify="range"
                                            placeholder="用户名" autocomplete="off" class="layui-input">
                                 </div>
                                 <div class="layui-form-item password-block">
                                     <label class="layui-icon label-icon layui-icon-password"></label>
-                                    <input type="password" name="password" minlength="6" lay-verify="range"
+                                    <input type="password" name="pwd" minlength="6" lay-verify="range"
                                            placeholder="密码" autocomplete="off" class="layui-input">
                                 </div>
                                 <div class="layui-form-item password-block">
@@ -110,7 +114,7 @@
                                         </el-form-item>
                                         <el-form-item prop="verificationCode">
                                             <el-input v-model="Register.sendcode" placeholder="验证码"
-                                                      style="width: 30%"></el-input>
+                                                      style="width: 40%"></el-input>
                                             <el-button icon="el-icon-mobile-phone" @click="sendcode" style="width: 15%"
                                                        type="success" :disabled="disabled=!show">
                                                 <span style="width: 100px;" v-show="show">获取验证码</span>
@@ -211,26 +215,23 @@
                 sendcode() {
                     const reg = 11 && /^((13|14|15|17|18)[0-9]{1}\d{8})$/
                     if (this.Register.phone == '') {
-                        this.$message({
+                        vue.$message({
                             message: '手机号不能为空',
                             center: true
                         })
                         return
                     }
                     if (!reg.test(this.Register.phone)) {
-                        this.$message({
+                        vue.$message({
                             message: '请输入正确的手机号',
                             center: true
                         })
-                        return
+                        return;
                     } else {
-                        SMSCode = this.Register.phone;
-                        console.log(this.Register.phone);
-
                         axios.get(api + '/user/sendCode', {params: {phone: this.Register.phone}})
                             .then(function (response) {
                                 //获取服务端响应的结果
-                                this.$message({
+                                vue.$message({
                                     message: '发送成功',
                                     type: 'success',
                                     center: true
@@ -326,27 +327,42 @@
         //提交注册表单
         form.on('submit(regist-submit)', function (data) {
             console.log(data.field);
-            if (data.field.password !== data.field.passwordB) {
+            if (data.field.pwd !== data.field.passwordB) {
                 layer.msg('两次密码输入不一致！');
                 return;
             }
-            if (SMSCode == '') {
+            if (vue.Register.sendcode == '') {
                 layer.msg('验证码不能为空！');
                 return;
             }
+
             var loading = $(this).find('.layui-icon');
             if (loading.is(":visible")) return;
             loading.show();
-            $.post('regist', data.field, function (r) {
-                if (r.code === 200) {
-                    layer.msg('注册成功，请登录');
+
+            data.field;
+
+            let obj = {
+                name: data.field.name,
+                pwd: data.field.pwd,
+                code: vue.Register.sendcode,
+                phone: vue.Register.phone,
+            }
+            axios.post(api + 'login/registeredUser', obj).then(r => {
+                if (r.data.code === 200) {
+                    layer.msg(r.data.message);
                     loading.hide();
                     $view.find('#login-href').trigger('click');
                 } else {
                     layer.msg(r.message);
                     loading.hide();
                 }
-            });
+            }).catch(err => {
+                vue.$message({
+                    message: err,
+                    center: true
+                })
+            })
             return false;
         });
 
@@ -390,7 +406,8 @@
                     $view.find('#regist').trigger("click");
             }
         });
-    });
+    })
+    ;
 
     function setCookie() { //设置cookie
         let username = $("#username").val(); //获取用户名信息
