修改描述文件

--- a/login.html
+++ b/login.html
@@ -25,6 +25,7 @@
         }
     </style>
     <script src="resources/lib/common/Convert_Pinyin.js"></script>
+    <link rel="icon" href="resources/images/favicon.ico">
 </head>
 <body background="resources/js/lay-module/PearAdmin/images/background.svg" onload="getCookie();">
 <div id="febs-login" lay-title="登录">
